cmake_minimum_required(VERSION 3.16)
project(TCP_IP_ C)

set(CMAKE_C_STANDARD 11)

add_compile_options()

add_executable(TCP_IP_
         37.oob_send.c 38.oob_recv.c 39。peek_send.c 40.peek_revc.c 41.writev.c 42.readv.c chapter_14.c 43.news_sender.c 44.receiver.c chapter_15.c 43.desto.c 44.todes.c 45.echo_stdserv.c 46.echo_client.c)
